implement optional feature of listing detail, with unit test

--- a/TradeMeBrowse/Podfile
+++ b/TradeMeBrowse/Podfile
@@ -2,4 +2,11 @@ target 'TradeMeBrowse' do
     platform :ios, '12.0'
     pod 'Alamofire',    '~> 4.7'
     pod 'AlamofireImage', '~> 3.4'
+    
+    target "TradeMeBrowseTests" do
+        inherit! :search_paths
+        
+        pod 'Alamofire',    '~> 4.7'
+        pod 'AlamofireImage', '~> 3.4'
+    end
 end
